# intelligentcar_T710

./: .gitignore  README.md
intelligentcar_T710_c++_v1/res/calibration/: 文件说明.txt
intelligentcar_T710_c++_v1/res/model/yolov3_mobilenet_v1/: io_paddle.json
intelligentcar_T710_c++_v1/src/: CMakeLists.txt
intelligentcar_T710_c++_v1/src/config/: motion.json
intelligentcar_T710_c++_v1/src/demo/: busy_detection.cpp  camera_calibrate.cpp  camera_display.cpp  cross_recognition.cpp  freezone_detection.cpp  freezone_recognition.cpp  garage_recognition.cpp  gasstation_detection.cpp  image2video.cpp  image_preprocess.cpp  motion_controller.cpp  perspective_mapping.cpp  ring_recognition.cpp  slope_detection.cpp  track_recognition.cpp
intelligentcar_T710_c++_v1/src/include/: capture.hpp  common.hpp  detection.hpp  predictor.hpp  uart.hpp
intelligentcar_T710_c++_v1/src/src/: controlcenter_cal.cpp  image_preprocess.cpp  main.cpp  motion_controller.cpp  path_searching.cpp  perspective_mapping.cpp
intelligentcar_T710_c++_v1/src/src/detection/: busy_detection.cpp  freezone_detection.cpp  gasstation_detection.cpp  slope_detection.cpp
intelligentcar_T710_c++_v1/src/src/recognition/: cross_recognition.cpp  freezone_recognition.cpp  garage_recognition.cpp  ringRight_recognition.cpp  ring_recognition.cpp  track_recognition.cpp
intelligentcar_T710_c++_v1/src/tool/: image2video.cpp
intelligentcar_T710_c++_v2/src/: CMakeLists.txt
intelligentcar_T710_c++_v2/src/config/: motion.json
intelligentcar_T710_c++_v2/src/demo/: bridge_detection.cpp  camera_calibrate.cpp  camera_display.cpp  cross_recognition.cpp  depot_detection.cpp  farmland_detection.cpp  freezone_recognition.cpp  garage_recognition.cpp  granary_detection.cpp  image2video.cpp  image_collection.cpp  image_preprocess.cpp  motion_controller.cpp  perspective_mapping.cpp  ring_recognition.cpp  slowzone_detection.cpp  track_recognition.cpp
intelligentcar_T710_c++_v2/src/include/: capture.hpp  common.hpp  detection.hpp  predictor.hpp
intelligentcar_T710_c++_v2/src/src/: controlcenter_cal.cpp  image_preprocess.cpp  main.cpp  motion_controller.cpp  path_searching.cpp  perspective_mapping.cpp
intelligentcar_T710_c++_v2/src/src/detection/: bridge_detection.cpp  depot_detection.cpp  farmland_detection.cpp  granary_detection.cpp  slowzone_detection.cpp
intelligentcar_T710_c++_v2/src/src/recognition/: cross_recognition.cpp  freezone_recognition.cpp  garage_recognition.cpp  ring_recognition.cpp  track_recognition.cpp
intelligentcar_T710_python_v1/res/calibration/: assessment.txt
intelligentcar_T710_python_v1/res/model/yolov3_mobilenet_v1/: deploy_paddle.ro  label_list.txt  nms.tar  post.onnx
intelligentcar_T710_python_v1/src/: CMakeLists.txt
intelligentcar_T710_python_v1/src/config/: config_ppncnna.json  motion.json
intelligentcar_T710_python_v1/src/python/: busyarea_detection.py  camera_display.py  cross_recognition.py  freezone_detection.py  freezone_recognition.py  garage_recognition.py  gasstation_detection.py  icar.py  image_collection.py  image_preprocess.py  paddle_detection.py  perspective_mapping.py  slope_detection.py
intelligentcar_T710_python_v1/src/tool/: collect.py  serialport.py
intelligentcar_T710_python_v2/res/calibration/: assessment.txt  calibration.xml
intelligentcar_T710_python_v2/src/: .clang-format
intelligentcar_T710_python_v2/src/config/: config_ppncnms.json  motion.json
intelligentcar_T710_python_v2/src/python/: bridge_detection.py  camera_calibration.py  depot_detection.py  farmland_detection.py  freezone_recognition.py  granage_detection.py  icar.py  image2video.py  image_preprocess.py  motion_controller.py  perspective_mapping.py  ring_recognition.py  slowzone_detection.py  track_recognition.py
intelligentcar_T710_python_v2/src/tool/: capture.py  cart.py  config.py  joystick.py
